--- a/libhsclient/Makefile.am
+++ b/libhsclient/Makefile.am
@@ -1,11 +1,8 @@
-AM_INCLUDES= -I. -I..
+AM_INCLUDES= -I. -I.. -I../hsutils
 ACLOCAL_AMFILES= $$ACLOCAL_ARGS
 
-# noinst_HEADERS= allocator.hpp          config.hpp    mutex.hpp          string_util.hpp  auto_addrinfo.hpp      escape.hpp    socket.hpp         thread.hpp auto_file.hpp          fatal.hpp     string_buffer.hpp  util.hpp auto_ptrcontainer.hpp  hstcpcli.hpp  string_ref.hpp
 lib_LTLIBRARIES= libhsclient.la
-libhsclient_la_SOURCES= config.cpp  escape.cpp  fatal.cpp  hstcpcli.cpp  socket.cpp  string_util.cpp
-libhsclient_la_CFLAGS= $(AM_CFLAGS) 
-libhsclient_la_CXXFLAGS= $(AM_CFLAGS) 
-libhsclient_la_LDFLAGS= -module 
-
-
+libhsclient_la_SOURCES= hstcpcli.cpp
+libhsclient_la_CFLAGS= $(AM_CFLAGS) $(AM_INCLUDES)
+libhsclient_la_CXXFLAGS= $(AM_CFLAGS) $(AM_INCLUDES)
+libhsclient_la_LDFLAGS= -module ../hsutils/.libs/libhsutils.a
